# clinical-rag-research

./: .gitignore  README.md  extract_plots.py  pyproject.toml
docs/research-revision/phase-01/: authoritative-results-manifest.md  paper-claim-correction-matrix.md  phase-01-exit-readiness.md  phase-lineage-map.md  reproduction-plan-draft.md  reproduction-run-manifest.md  reviewer-concern-mapping.md  sprint-1-1-repo-safety-and-source-freeze.md  sprint-1-2-authoritative-result-provenance.md  (+3 more)
notebooks/: noteone.ipynb
reports/: phase1_baseline.md  phase2_header_prop.md  phase3_reranking.md
reports/novelty/: phase4_validation_review.md  phase5_quantitative_proof.md  phase5_strategic_roadmap.md
reports/publication/: timer_graph_implementation_report.md
results/phase5/: results_table.tex
results/phase5_v2/: results_table.tex
scripts/: combine_hard_negatives.py  create_sidecar.py  generate_hard_negatives.py  mine_hard_negatives.py  prepare_final_dataset.py  run_end_to_end_eval.py  run_hard_negative_eval.py  run_timer_eval.py  verify_metadata.py
src/app/: main.py
src/baseline/: pipelines.py  prepare_index.py
src/evaluation/: create_baseline.py
tests/: args.py  test_scoring.py  test_timer_integration.py
tests/tests_runs_logs/: 0.1.txt  0.2.txt  0.3.txt  1.0.txt  2.0  2.1
visualizations/: generate_figures.py  timer_visualizations.ipynb  timer_visualizations_executed.ipynb
visualizations/evaluation/: 01_performance_analysis.ipynb  01_performance_analysis_executed.ipynb
visualizations/examples/: 01_working_examples.ipynb  01_working_examples_executed.ipynb
(+64 files in other folders)
